--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,14 +1,4 @@
 language: cpp
-compiler:
-- clang
-os:
-- osx
-before_install:
-- echo $LANG
-- echo $LC_ALL
-- brew update && brew install cmake
-- mkdir build
-- cd build
-- cmake -DCMAKE_CXX_COMPILER=clang++ ../src
+compiler: clang
 script:
-- make
+  - make
