--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ compiler: clang++
 branches:
   only:
     - master
+before_script:
+  - brew update && brew install cmake
 script:
   - mkdir build
   - cd build
