--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,6 +3,12 @@ add_executable(test_3dfileconverter
   test.cpp
 )
 
+target_link_libraries(test_3dfileconverter
+  converter
+)
+
+include_directories ("${PROJECT_SOURCE_DIR}/lib/include")
+
 add_test(
   NAME    3DFileConverter
   COMMAND test_3dfileconverter
